streetart/static/streetart/css/style.css
/* ... */
.button-social .icon:before {
    display: inline-block;
    width: 40px;
}

.button-social .icon:after {
    content:"";
}

.button-social:hover {
    text-decoration: none;
}

.navbar-nav .button-facebook {
    background-color: #4b70ab;
    border: 1px solid #3b5988;
}

.navbar-nav .button-facebook:hover {
    color: white;
    background-color: #3b5988;
}

.button-facebook .icon {
    border-right:1px solid #3b5988;
}

.button-facebook .icon:hover {
    border-right:1px solid #4b70ab;
}

.button-twitter {
    background-color: #00A4EF;
    border: 1px solid #0093d6;
}

.button-twitter:hover {
    color: white;
    background-color: #0093d6;
}

.button-twitter .icon {
    border-right:1px solid #0093d6;
}

.button-twitter .icon:hover {
    border-right:1px solid #00A4EF;
}

/*** Snackbar ***/

.snackbar {
    visibility: hidden;
    width: 300px;
    margin-left: -150px;
    background-color: #333;
    color: #fff;
    text-align: center;
    border-radius: 2px;
    padding: 16px;
    position: fixed;
    z-index: 1;
    left: 50%;
    bottom: 30px;
    font-size: 17px;
}

.snackbar.show {
    visibility: visible;
    -webkit-animation: fadeup 0.5s, fadedown 0.5s 2.5s;
    animation: fadeup 0.5s, fadedown 0.5s 2.5s;
}

@-webkit-keyframes fadeup {
    from {bottom: 0; opacity: 0;}
    to {bottom: 30px; opacity: 1;}
}

@keyframes fadeup {
    from {bottom: 0; opacity: 0;}
    to {bottom: 30px; opacity: 1;}
}

@-webkit-keyframes fadedown {
    from {bottom: 30px; opacity: 1;}
    to {bottom: 0; opacity: 0;}
}

@keyframes fadedown {
    from {bottom: 30px; opacity: 1;}
    to {bottom: 0; opacity: 0;}
}

/*** Widgets ***/

.mw-wrap{
    width: 100% !important;
}

/*** Floating Action Buttons ***/

.fab {
    position: fixed;
    right: 10px;
    bottom: 10px;
    background: white;
    color: rgb(158,158,158);
}

.fab.navbar-gallery {
    right: auto;
    left: 10px;
}

/*** Comments ***/


.comment h4 {
    display: none;
}

.comment button{
    outline: none;
    border: none;
}

.cannot-comment-warning {
    color: white;
}

form{
    padding: 1em;
}

.comment .form-control {
    display: block;
    width: 100% ;
    font-size: 14px !important;
    font-weight: 400 !important;
    line-height: 1.5 !important;
    background-color: rgba(0, 0, 0, 0);
    background-image: none !important;
    border: none !important;
    min-height: 80px;
    color: white !important;
    box-shadow: black 0px 0px 8px inset;
}

.comment .form-control:focus{
    border-color: rgba(3, 161, 241, 1) !important;
}

.comment {
    text-align: left;
    color: white;
    display: inline-block;
    width: 100%;
    max-width: 700px;
}

.well{
    padding: 0;
    margin: 0;
    border: none;
    box-shadow: none;
    background-image: none;
    background-color: transparent;
}
.well form{
    background-color: transparent;
    color: white;
}

.media-list {
    display: inline-block;
}

.media-list > .media {
    border-bottom: 1px solid rgba(160, 160, 160, 0.2);
    padding: 10px;
    max-width: 700px;
}

.media-left > img {
    border-radius: 5px;
}

/*** Side Navigation Menu ***/

.menu-toggle {
    height: 80px;
}

.menu-toggle i {
    line-height: 80px;
}

/* The side navigation menu */
.sidenav {
    height: 100%; /* 100% Full-height */
    width: 0; /* 0 width - change this with JavaScript */
    position: fixed; /* Stay in place */
    z-index: 1; /* Stay on top */
    top: 0;
    left: 0;
    background-color: #111; /* Black*/
    overflow-x: hidden; /* Disable horizontal scroll */
    padding-top: 60px; /* Place content 60px from the top */
    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

/* The navigation menu links */
.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.3s
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover, .offcanvas a:focus{
    color: #f1f1f1;
}

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
.nav-header, .split-page {
    transition: margin-left .5s;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
}


/*** Alerts ***/
.alert{
    position: absolute;
    top: 80px;
    z-index: 10;
    width: 100%;
}

/*** Thanks Page ***/

.thanks-page {
    height: calc(100% - 80px);
    overflow: scroll;
    color: white;
}

/*** Custom Pages ***/

.custom-page-content{
    color: white;
}

.yellow-donate-btn {
    background-color: yellow;
    width: 80px;
    padding: 10px 25px;
    border-radius: 10px;
    text-align: center;
    margin: 0;
    color: black;
    border-color: transparent;
    margin-right: 10px;
}
.yellow-donate-btn:hover, .yellow-donate-btn:active {
    background-color: rgb(199, 199, 0);
}

.custom-page-content form {
    margin: 0;
    padding: 4px;
}
.custom-page-content .fa-heart {
    float: left;
    font-size: 85px;
    margin: 20px 30px;
}

.custom-page-content .border-img {
    border: 1px solid grey;
    padding: 10px;
    border-radius: 5px;
}

.custom-page-content .logo-col {
    width: 24.5%;
    display: table-cell;
    background-color: white;
    border-spacing: 8px;
    border: solid;
    border-width: 0px;
}
.custom-page-content .logo-col2 {
    width: 19%;
    display: table-cell;
    background-color: white;
    position: relative;
    border-spacing: 8px;
    border: solid;
    border-width: 0px;
}
/* ... */

